--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -14,11 +14,10 @@
     :root {
       --margin-block: 30px;
     }
-    html {
+    body {
+      background-image: url(./images.png);
       background-repeat: no-repeat;
       background-size: cover;
-      background-image: url(./images.png);
-      background-position: top left;
       color: white;
       text-align: center;
     }
@@ -94,11 +93,6 @@
       <a href="./array.html" class="btn">Array</a>
     </div>
     <hr>
-    <h2>JavaScript ToDo App (08-08-2024)</h2>
-    <div class="flex">
-      <a href="./to_do_app/index.html" class="btn">ToDo App</a>
-    </div>
-    <hr>
     <h2>jQuery</h2>
     <div class="flex">
       <a href="./jQuery/effect.html" class="btn">jQuery Effect</a>
@@ -107,6 +101,7 @@
     <hr>
     <h2>Tasks</h2>
     <div class="flex">
+      <a href="./to_do_app/index.html" class="btn">ToDo App</a>
       <a href="./calculator/index.html" class="btn">Calculator task</a>
       <a href="./palindrome.html" class="btn">Palindrome Checker task</a>
       <a href="./digitalClock/index.html" class="btn">Digital Clock task</a>
