Welcome page create in JS

--- a/JavaScript/event_practice/form-validation/index.html
+++ b/JavaScript/event_practice/form-validation/index.html
@@ -41,11 +41,11 @@
                         <p id="emailError" class="error m-0"></p>
                     </div>
                     <div>
-                        <input type="text" id="password1" placeholder="Enter Password">
+                        <input type="password" id="password1" placeholder="Enter Password">
                         <p id="pwdError" class="error m-0"></p>
                     </div>
                     <div>
-                        <input type="text" id="password2" placeholder="Enter Confirm password">
+                        <input type="password" id="password2" placeholder="Enter Confirm password">
                         <p id="pwd2Error" class="error m-0"></p>
                     </div>
 
