--- a/JavaScript/event_practice/form-validation/login.html
+++ b/JavaScript/event_practice/form-validation/login.html
@@ -47,6 +47,8 @@
         <div class="successMsg p-2 rounded bg-light w-25" id="successMessage">
             <i class="fa-solid fa-circle-check fa-lg text-success"></i> Login successfully
         </div>
+        <div class="successMsg p-2 rounded bg-light w-25" id="ErrorMessage"> 
+        </div>
 
     </div>
 
@@ -77,7 +79,7 @@
 
                 // Check if user was found
                 if (!foundUser) {
-                    error.validData = "* Please enter valid data.";
+                    error.validData = "Please enter valid data.";
                 }
             }
 
@@ -87,10 +89,15 @@
 
                 // Clear previous error messages
                 document.getElementById("usernameError").innerHTML = '';
-                //document.getElementById("pwdError").innerHTML = '';
 
                 // Display new error messages
-                document.getElementById("usernameError").innerHTML = error.required || error.validData || '';
+                if(error.required){
+                    document.getElementById("usernameError").innerHTML = error.required || '';
+                }
+                else{
+                    document.getElementById("ErrorMessage").innerHTML=error.validData || '';
+                    Errormessage();
+                }
 
 
             } else {
@@ -99,7 +106,8 @@
                     // Show success message
                     const successMessage = document.getElementById("successMessage");
                     successMessage.style.display = "block";
-
+                    document.cookie=`username=${uname.value}`;
+                    document.cookie="isAuthenticate=true";
                     //hide the message after 3 seconds
                     setTimeout(() => {
                         successMessage.style.display = "none";
@@ -111,6 +119,16 @@
                 }
             }
         });
+        function Errormessage(){
+            const errorMessage = document.getElementById("ErrorMessage");
+            errorMessage.style.display = "block";
+
+            //hide the message after 3 seconds
+            setTimeout(() => {
+                errorMessage.style.display = "none";
+            }, 3000);
+            document.querySelector("form").reset();
+        }
     </script>
 
 </body>
