--- a/JavaScript/event_practice/form-validation/Authentication.html
+++ b/JavaScript/event_practice/form-validation/Authentication.html
@@ -21,7 +21,7 @@
             text-decoration: none;
             color:white;
         }
-        a:hover{
+        .btn:hover,a:hover{
             background-color: #fff;
             color: black !important;
         }
@@ -39,16 +39,16 @@
             <div class="container p-3 mt-3">
                 <nav class="navbar navbar-expand-lg">
                     <a href="#" class="navbar-brand ms-3 text-uppercase fw-bold fs-4">Logome</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbars2">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse justify-content-end gap-5" id="navbars2">
-                        <ul class="navbar-nav gap-4">
+                    <div class="collapse navbar-collapse justify-content-end align-items-center gap-5" id="navbar">
+                        <ul class="navbar-nav gap-4 align-items-center">
                             <li class="nav-item"><a href="#" class="nav-link fw-semibold fs-5">Home</a></li>
                             <li class="nav-item"><a href="#" class="nav-link fw-semibold fs-5">About us</a></li>
                             <li class="nav-item"><a href="#" class="nav-link fw-semibold fs-5">Blog</a></li>
                             <li class="nav-item"><a href="#" class="nav-link fw-semibold fs-5">Contact us</a></li>
-                            <button class="btn rounded-4 text-light"><a href="" id="logout">Logout</a></button>
+                            <button class="btn rounded-4"><a href="" id="logout">Logout</a></button>
                         </ul>
                     </div>
                 </nav>
@@ -66,21 +66,23 @@
  
 
     <script>
+        
         let cookie = document.cookie.split(';');
         console.log(cookie)
         let obj = {};
         let maps = cookie.map((val) => {
             let [key, value] = val.split('=');
             console.log(key,value);
-            obj[key] = value;
-        })
-        console.log(obj);
-          console.log(obj['username']);
-        document.getElementById("username").textContent = obj[' username'];
+            obj[key.trim()] = value.trim();
+        });
+        console.log(obj);       
+        console.log(obj['username']);
+        document.getElementById("username").textContent = obj['username'];
         document.getElementById("logout").addEventListener("click", (e) => {
             document.cookie = "isAuthenticate=false";
             e.target.innerHTML = "Login";
-            e.target.href="login.html"
+            window.history.replaceState(null, '', 'login.html'); 
+            location.href="login.html";    
         })
     </script>
 </body>
