learn prototype in JS

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -14,11 +14,11 @@
     :root {
       --margin-block: 30px;
     }
-    html {
+    body {
       background-repeat: no-repeat;
       background-size: cover;
       background-image: url(./images.png);
-      background-position: top left;
+      background-attachment: fixed;
       color: white;
       text-align: center;
     }
