--- a/JavaScript/api.html
+++ b/JavaScript/api.html
@@ -42,7 +42,7 @@
                 let res=await fetch('https://jsonplaceholder.typicode.com/todos');
                 let data=res.json();
                 console.log(data);
-                //data.then(value=>value.map((el)=>console.log(el.id))); 
+                //data.then(value=>value.map((el)=>console.log(el))); 
             }
             catch(error){console.log(error);}
         } 
