--- a/JavaScript/string.html
+++ b/JavaScript/string.html
@@ -88,7 +88,7 @@
     </div>
 
     <div class="container p-5 bg-danger-subtle mt-5">
-        <h2 class="p-2 text-center bg-secondary-subtle">include() Method</h2>
+        <h2 class="p-2 text-center bg-secondary-subtle">includes() Method</h2>
         <label for="str" class="form-label fw-semibold">Enter the string</label>
         <input type="text" id="include_str" class=" form-control">
         <label for="str" class="form-label fw-semibold">Enter search word of string</label>
