--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
       :root{
         --margin-block:30px;
       }
-        html{
+        body{
           background-repeat: no-repeat;
           background-size: cover;
           background-image: url(./images.png);
-          background-position: top left;
           color:white;
+          background-attachment: fixed;
           text-align: center;
+          
         }
         h2{
           font-size: 35px;
