--- a/JavaScript/event_practice/form-validation/login.html
+++ b/JavaScript/event_practice/form-validation/login.html
@@ -5,6 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
+    <script>
+                // Code runs before the DOM is fully loaded
+                let checkCookie=()=>{
+                    let cookie = document.cookie.split(';');
+                    let obj = {};
+                    let maps = cookie.map((val) => {
+                    let [key, value] = val.split('=');
+                    obj[key.trim()] = value.trim();
+                    });
+                    console.log(obj);
+                    if(obj["isAuthenticate"]=="true"){
+                        window.history.replaceState(null, '', 'Authentication.html'); 
+                        location.href="Authentication.html";   
+                    }
+                }
+               checkCookie();
+    </script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -54,20 +71,6 @@
     </div>
 
     <script>
-        // Code runs before the DOM is fully loaded
-        let checkCookie=()=>{
-            let cookie = document.cookie.split(';');
-            let obj = {};
-            let maps = cookie.map((val) => {
-            let [key, value] = val.split('=');
-            obj[key.trim()] = value.trim();
-            });
-            console.log(obj);
-            if(obj["isAuthenticate"]=="true"){
-            location.href="Authentication.html"; 
-            }
-        }
-        document.addEventListener("DOMContentLoaded", checkCookie);
         // Select DOM elements
         const uname = document.getElementById("uname");
         const pwd = document.getElementById("pwd");
