--- a/JavaScript/index.html
+++ b/JavaScript/index.html
@@ -20,6 +20,7 @@
       background-size: cover;
       color: white;
       text-align: center;
+      background-attachment: fixed;
     }
     h2 {
       font-size: 35px;
