update a todo app

--- a/JavaScript/to_do_app/index.html
+++ b/JavaScript/to_do_app/index.html
@@ -30,7 +30,7 @@
       </ul>
       <button class="btn w-50 mx-auto" onclick="allDataDelete()">Delete All</button>
     </div>
-    <div class="right-side mt-5 text-center">
+    <div class="right-side mt-5 text-center w-100">
       <img src="./image.png" alt="" class=""/>
     </div>
   </div>
