change the todo list task and login page in js

--- a/JavaScript/event_practice/form-validation/Authentication.html
+++ b/JavaScript/event_practice/form-validation/Authentication.html
@@ -14,20 +14,18 @@
         .nav-link{
             color:#8f8f92;
         }
-        .btn{
-            background-color:#AFAAD6;
-        }
         a{
             text-decoration: none;
             color:white;
         }
-        .btn:hover,a:hover{
-            background-color: #fff;
-            color: black !important;
-        }
         .msg{
             color:#453186;
             font-size: 3rem;
+        }
+        .logout-btn{
+            background-color:#AFAAD6;
+            border: none;
+            padding: 10px;
         }
         
     </style>
@@ -48,7 +46,7 @@
                             <li class="nav-item"><a href="#" class="nav-link fw-semibold fs-5">About us</a></li>
                             <li class="nav-item"><a href="#" class="nav-link fw-semibold fs-5">Blog</a></li>
                             <li class="nav-item"><a href="#" class="nav-link fw-semibold fs-5">Contact us</a></li>
-                            <button class="btn rounded-4"><a href="" id="logout">Logout</a></button>
+                            <button class="rounded-4 logout-btn"><a href="" id="logout">Logout</a></button>
                         </ul>
                     </div>
                 </nav>
