--- a/JavaScript/to_do_app/index.html
+++ b/JavaScript/to_do_app/index.html
@@ -30,9 +30,10 @@
       </ul>
       <button class="btn w-50 mx-auto" onclick="allDataDelete()">Delete All</button>
     </div>
-    <div class="right-side mt-5 text-center w-100">
+   
+    <!-- <div class="right-side mt-5 text-center w-100">
       <img src="./image.png" alt="" class=""/>
-    </div>
+    </div> -->
   </div>
   
 
