--- a/JavaScript/event_practice/form-validation/index.html
+++ b/JavaScript/event_practice/form-validation/index.html
@@ -5,7 +5,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form validation in js</title>
-    <script src="./form_validation.js"></script>
+    <script>
+        // Code runs before the DOM is fully loaded
+        let checkCookie=()=>{
+            let cookie = document.cookie.split(';');
+            let obj = {};
+            let maps = cookie.map((val) => {
+            let [key, value] = val.split('=');
+            obj[key.trim()] = value.trim();
+            });
+            console.log(obj);
+            if(obj["isAuthenticate"]=="true"){
+                window.history.replaceState(null, '', 'Authentication.html'); 
+                location.href="Authentication.html";   
+            }
+        }
+       checkCookie();
+</script>
+   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -34,22 +51,37 @@
             <form action="" class="d-flex flex-column text-light gap-4">
                 <div class="d-flex flex-column fields">
                     <div>
-                        <input type="text" id="username" placeholder="Enter Username">
-                        <p id="usernameError" class="error m-0"></p>
+                        <label for="username" class="w-100">
+                            <input autocomplete="off" type="text" id="username" placeholder="Enter Username">
+                        </label>
+                        <p id="usernameError" class="error m-0 ps-2"></p>
                     </div>
                     <div>
-                        <input type="text" id="email" placeholder="Enter Email">
-                        <p id="emailError" class="error m-0"></p>
+                        <label for="email" class="w-100">
+                            <input autocomplete="off" type="text" id="email" placeholder="Enter Email">
+                        </label>
+                        <p id="emailError" class="error m-0 ps-2"></p>
                     </div>
                     <div>
-                        <input type="password" id="password1" placeholder="Enter Password">
-                        <p id="pwdError" class="error m-0"></p>
+                        <label for="password1" class="w-100">
+                            <div class="password-container">
+                                <input autocomplete="off" type="password" id="password1" placeholder="Enter Password">
+                                <i class="fa-solid fa-eye" id="icon-eye"></i>
+                                <i class="fa-solid fa-eye-slash" id="icon-eye-slash" style="display: none;"></i>
+                            </div>
+                        </label>
+                        <p id="pwdError" class="error m-0 ps-2"></p>
                     </div>
-                    <div>
-                        <input type="password" id="password2" placeholder="Enter Confirm password">
-                        <p id="pwd2Error" class="error m-0"></p>
+                    <div> 
+                        <label for="password2" class="w-100">
+                            <div class="password-container">
+                                <input autocomplete="off" type="password" id="password2" placeholder="Enter Confirm password">
+                                <i class="fa-solid fa-eye" id="icon-eye2"></i>
+                                <i class="fa-solid fa-eye-slash" id="icon-eye-slash2" style="display: none;"></i>
+                            </div>
+                        </label>
+                        <p id="pwd2Error" class="error m-0 ps-2"></p>
                     </div>
-
                 </div>
                 <div class="d-flex flex-column gap-2">
                     <div>Already have an Account? <a href="./login.html" class="ms-1 text-light fw-semibold">Login</a></div>
@@ -63,7 +95,7 @@
 
 
     </div>
-    
+    <script src="./form_validation.js"></script>
 </body>
 </html>
 
