--- a/Bootstrap/grid.html
+++ b/Bootstrap/grid.html
@@ -45,17 +45,16 @@
       </div>
     </div> -->
 
-    <!-- <div class="container text-center">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 align-items-end text-bg-dark py-5">
+    <div class="container text-center">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 align-items-end py-5">
         <div class="col border gy-2 align-items-start">Column</div>
         <div class="col border gy-2 ">Column</div>
         <div class="col border gy-2 ">Column</div>
         <div class="col border gy-2 ">Column</div> 
       </div>
-    </div> -->
+    </div>
 
-
-    <div class="container-fluid text-center">
+     <!-- <div class="container-fluid text-center">
       <div class="row align-items-end border" style="height: 200px; width:100%;" >
         <div class="col order-3 border mx-2">
           One of three columns 
@@ -67,7 +66,7 @@
           three of three columns
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- <div class="container text-center">
       <div class="row border justify-content-start">
@@ -92,3 +91,4 @@
     crossorigin="anonymous"></script>
 </body>
 </html>
+
